--- a/html/exercises/index.html
+++ b/html/exercises/index.html
@@ -8,9 +8,13 @@
     <!-- DON'T TOUCH ANYTHING ABOVE THIS LINE -->
   </head>
   <body>
-    <!-- h1 goes here -->
-    <!-- ol goes here -->
-    <!-- a goes here -->
-    <!-- p goes here -->
+    <h1>Why I Love Web Development</h1><!-- h1 goes here -->
+    <ol>
+      <li>I can make pretty things</li>
+      <li>I can learn new stuff</li>
+      <li>I like design</li>
+    </ol><!-- ol goes here -->
+    <a href="https://www.webelements.com/" target="_blank">WebElements</a><!-- a goes here -->
+    <p>I will make a super cool webpage with my brand new HTML superpowers! I will write some beautiful code and make sure it looks nice. Also, I will put lots of links and pictures in my brand new webpage</p><!-- p goes here -->
   </body>
 </html>
