--- a/user-input-with-forms/studio/index.html
+++ b/user-input-with-forms/studio/index.html
@@ -3,17 +3,42 @@
 <head>
 	<meta charset="utf-8">
 	<script>
-		// TODO: create a handler
+		
+	let actions = {
+		"google": "https://www.google.com/",
+		"duckDuckGo": "https://duckduckgo.com/",
+		"bing": "https://www.bing.com/search",
+		"ask": "https://www.ask.com/web"
+	};
+
+
+	function setSearchEngine () {
+		console.log("Reached setSearchEngine!")
+		let response = document.querySelector("[name=engine]:checked").value
+		let selectedEngine = actions[response]
+		const form = document.getElementById("searchForm")
+		form.setAttribute("action", selectedEngine)
+		console.log(selectedEngine)
+	};
+
     window.addEventListener("load", function(){
-        // TODO: register the handler
+		const form = document.getElementById("searchForm")
+		form.addEventListener("submit", event => {
+			setSearchEngine()
+		})
     });
 	</script>
 </head>
 
 <body>
 
-	<form id="searchForm">
-    <!-- TODO: add form elements -->
+	<form  id="searchForm">
+		<label>Search <input type="text" name="q"></label>
+		<label>Google<input type="radio" name="engine" value="google"/></label>
+    	<label>DuckDuckGo<input type="radio" name="engine" value="duckDuckGo"/></label>
+    	<label>Bing<input type="radio" name="engine" value="bing"/></label>
+		<label>Ask<input type="radio" name="engine" value="ask"/></label>
+		<button>Go!</button>
 	</form>
 
 </body>
